vote/voting-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      containers:
        - name: voting-app
          image: docker/example-voting-app-vote:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app
spec:
  selector:
    app: voting-app
  ports:
    - port: 80
      targetPort: 80
